# msgbuzz

./: Makefile  README.md  pyproject.toml  setup.py
examples/: receive.py
examples/pgmq/: receive.py  send.py
examples/rabbitmq/: send.py
examples/supabase/: receive.py  send.py
msgbuzz/: __init__.py  generic.py  pgmq.py  rabbitmq.py  supabase.py
